--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # SITE SETTINGS
-title: ENABLING                       # Title in top navigation bar (navbar) and <head>
+title: SEMIAC                       # Title in top navigation bar (navbar) and <head>
 author: NIT OVGU                    # Used for copyright statement in footer
-baseurl: /enabling                   # Only required if your site is in a directory e.g. https://username.github.io/sitename
+baseurl: /semiac                   # Only required if your site is in a directory e.g. https://username.github.io/sitename
                                         # which has url: "https://username.github.io" (no slash) and baseurl: "/sitename" (leading slash)
                                         # A baseurl affects internal links, see http://peterdesmet.com/petridish/markdown/#links
 
