--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,28 +1,39 @@
 # Project team members listed below will appear on the /team page
 
-#- name: Philip J. Fry
-#  role: Delivery boy # Will appear next to name
-#  image: assets/theme/images/fry_ethan-hoover-311143-unsplash.jpg # Can be external link
-#  description: > # Can be Markdown
-#    Protagonist, from the 20th century. Many times great-uncle to Professor Hubert Farnsworth.
-#  orcid: 0000-0000-0000-0000
-#  researchgate: researchgate_username
-#  googlescholar: googlescholar_username
-#  bluesky: bluesky_username.bsky.social
-#  mastodon: https://mastodon.social/@mastodon_username
-#  twitter: twitter_username
-#  linkedin: linkedin_username
-#  github: github_username
-#  email: name@example.com
+- name: Prof. Dr.-Ing. habil. Ayoub Al-Hamadi
+  role: Principal Investigator
+  image: https://www.nit.ovgu.de/typo3conf/ext/nit/Resources/Public/Images/Ayoub_Al_Hamadi.png
+  description: >
+    Head of the Neuro-Information Technology (NIT) research group at Otto von Guericke University Magdeburg. 
+    Expert in pattern recognition, image processing, and AI-based assistance systems with over 350 publications 
+    and extensive experience leading national and international research projects.
+  orcid: 0000-0002-3632-2402
+  email: ayoub.al-hamadi@ovgu.de
 
-#- name: Turanga Leela
-#  role: Captain
-#  description: >
-#    Mutant cyclops. Leela is spaceship captain, pilot, and head of all 
-#    aviation services on board the [Planet Express Ship](https://en.wikipedia.org/wiki/Planet_Express_Ship). 
+- name: PD Dr.-Ing. Sven Wachsmuth
+  role: Principal Investigator
+  image: https://ekvv.uni-bielefeld.de/pers_publ/publ/bild.jsp?personId=10378
+  description: >
+    Head of the Central Lab at the Center for Cognitive Interaction Technology (CITEC), Bielefeld University. 
+    Specialist in human-robot interaction and cognitive systems. Contributor to numerous interdisciplinary projects, 
+    including the Collaborative Research Center 360 "Situated Artificial Communicators".
+  orcid: 0000-0001-5371-7214
+  email: sven.wachsmuth@uni-bielefeld.de
 
-#- name: Professor Hubert J. Farnsworth
-#  role: CEO & Owner
-#  image: assets/theme/images/farnsworth_angelo-abear-1662775-unsplash.jpg
-#  description: >
-#    Many times great-nephew of Fry. Tenured professor of [Mars University](https://en.wikipedia.org/wiki/Mars_University).
+- name: M.Sc. Magnus Jung
+  role: PhD Researcher
+  image: https://www.nit.ovgu.de/typo3conf/ext/nit/Resources/Public/Images/Magnus_Jung.png
+  description: >
+    PhD candidate at Otto von Guericke University Magdeburg. His research focuses on context-sensitive 
+    human-robot interaction, with expertise in speech processing, SLAM, and gaze-based coordination systems.
+  orcid: 0009-0006-1353-4185 
+  email: magnus.jung@ovgu.de
+
+- name: Qiaoyue Yang
+  role: PhD Researcher
+  image: https://ekvv.uni-bielefeld.de/pers_publ/publ/bild.jsp?personId=398652361
+  description: >
+    PhD candidate at Bielefeld University in the field of cognitive ergonomics and multimodal human-machine interaction. 
+    She is part of the Collaborative Research Center 1646 "Linguistic Creativity in Communication", focusing on adaptive assistance systems.
+  orcid: 0009-0009-8529-0652
+  email: qiaoyue.yang@uni-bielefeld.de
