--- a/_data/team.yml
+++ b/_data/team.yml
@@ -29,7 +29,7 @@
   orcid: 0009-0006-1353-4185 
   email: magnus.jung@ovgu.de
 
-- name: Qiaoyue Yang
+- name: M.Sc. Qiaoyue Yang
   role: PhD Researcher
   image: https://ekvv.uni-bielefeld.de/pers_publ/download/g/1/c/420619444/Original_398652361.jpeg
   description: >
