--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2,7 +2,7 @@
 
 - name: Prof. Dr.-Ing. habil. Ayoub Al-Hamadi
   role: Principal Investigator
-  image: https://www.nit.ovgu.de/iesk_media/Bilder/ti/al_hamadi-height-145-width-120-p-824.jpeg
+  image: https://www.ovgu.de/unimagdeburg_media/Forschung+_+Wirtschaft/Professorenportraits/FEIT/IIKT/Ayoub+Al_Hamadi-p-94466.jpg
   description: >
     Head of the Neuro-Information Technology (NIT) research group at Otto von Guericke University Magdeburg. 
     Expert in pattern recognition, image processing, and AI-based assistance systems with over 350 publications 
