--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,8 @@
   href: /publications/
 - text: News
   href: /blog/
+- text: NIT-OVGU
+  href: https://www.nit.ovgu.de/
 #- text: Documentation
 #  menu: # Dropdown menu (one level deep only)
 #  - text: Installation
