--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2,7 +2,7 @@
 
 - name: Prof. Dr.-Ing. habil. Ayoub Al-Hamadi
   role: Principal Investigator
-  image: https://www.ovgu.de/unimagdeburg_media/Forschung+_+Wirtschaft/Professorenportraits/FEIT/IIKT/Ayoub+Al_Hamadi-p-94466.jpg
+  image: https://www.nit.ovgu.de/iesk_media/Bilder/ti/al_hamadi-height-145-width-120-p-824.jpeg
   description: >
     Head of the Neuro-Information Technology (NIT) research group at Otto von Guericke University Magdeburg. 
     Expert in pattern recognition, image processing, and AI-based assistance systems with over 350 publications 
@@ -22,7 +22,7 @@
 
 - name: M.Sc. Magnus Jung
   role: PhD Researcher
-  image: https://www.nit.ovgu.de/nit_media/Bewerbungsfoto-height-2102-width-1500.jpg
+  image: https://www.nit.ovgu.de/nit_media/Bewerbungsfoto-height-2102-p-414-width-1500.jpg
   description: >
     PhD candidate at Otto von Guericke University Magdeburg. His research focuses on context-sensitive 
     human-robot interaction, with expertise in engagment detection, speech processing and SLAM.
