Update navigation.yml - open NIT in new tab

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,7 @@
 #   href: /blog/
 - text: NIT-OVGU
   href: https://www.nit.ovgu.de/
+  target: _blank
 #- text: Documentation
 #  menu: # Dropdown menu (one level deep only)
 #  - text: Installation
